welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: ')' expected but integer literal found.
while (estSurBiscuit==true  nbbis<4){
                                  ^RunFour:8: error: illegal start of simple expression
	}
        ^